--- a/Python/BMW Car Sales.ipynb
+++ b/Python/BMW Car Sales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2edf7bbc-fc8f-4d92-ba07-3d70fba92225",
    "metadata": {},
    "outputs": [
@@ -467,9 +467,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
